Import of LICHTKIND/Kephra-0.4.1_18 from CPAN.
gitpan-cpan-distribution: Kephra
gitpan-cpan-version:      0.4.1_18
gitpan-cpan-path:         LICHTKIND/Kephra-0.4.1_18.tar.gz
gitpan-cpan-author:       LICHTKIND
gitpan-cpan-maturity:     developer

--- a/Changes
+++ b/Changes
@@ -3,6 +3,10 @@ BUGS:
  !!! test suite fails
  ! textchanged event triggers twice
 
+0.4.1.18
+ ~ session save now docs in visual order
+ ~ search findings even visible when hidden in folded line
+
 0.4.1.17
  ! sessions save does work again
  ! tabs and other doc settings work again
