Import of LICHTKIND/Kephra-0.4.2 from CPAN.
gitpan-cpan-distribution: Kephra
gitpan-cpan-version:      0.4.2
gitpan-cpan-path:         LICHTKIND/Kephra-0.4.2.tar.gz
gitpan-cpan-author:       LICHTKIND
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,6 +1,8 @@
 BUGS:
  !!! makefile.pl fails
 
+0.4.2 testing release: new tabbar
+
 0.4.1.19
  [ reduce clutter while boot and shut down
  ] changed all constants to &Wx::... syntax
@@ -117,7 +119,7 @@ BUGS:
  + key binding for fold ops: fold => alt+plus, fold siblings => alt+shift+plus
  ! fixed commandlist cache logic, refreshes now if needed
 
-0.4.1 testing release
+0.4.1 testing release: folding
 
 0.4.0.12
  [ unfolds all if hides folding margin
