Import of LICHTKIND/Kephra-0.4.2_24 from CPAN.
gitpan-cpan-distribution: Kephra
gitpan-cpan-version:      0.4.2_24
gitpan-cpan-path:         LICHTKIND/Kephra-0.4.2_24.tar.gz
gitpan-cpan-author:       LICHTKIND
gitpan-cpan-maturity:     developer

--- a/Changes
+++ b/Changes
@@ -1,6 +1,10 @@
 BUGS:
  !!! makefile.pl fails
 
+0.4.2.24
+ + add support for latin 1 coding (codepage property)
+ ! reload and and insert file works again
+
 0.4.2.23
  + autorecognition via encode::guess
  + read and write utf
