Import of LICHTKIND/Kephra-0.4.2_34 from CPAN.
gitpan-cpan-distribution: Kephra
gitpan-cpan-version:      0.4.2_34
gitpan-cpan-path:         LICHTKIND/Kephra-0.4.2_34.tar.gz
gitpan-cpan-author:       LICHTKIND
gitpan-cpan-maturity:     developer

--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 BUGS:
-! fold all doesn't work
+
+0.4.2.34
+ ! utf labels now work on windows too (linux did it automaticlly right)
 
 0.4.2.33
  ! release tool now does tgz with the right rights
