--- a/Changes
+++ b/Changes
@@ -1,4 +1,16 @@
 
+0.4.2.39
+ + copy surrounding quoted string
+ " getting default settings of new files when opening empty files
+ [ moving insert templates into tools menu
+ ! file history menu works again
+ ! crash when open empty files
+
+0.4.3
+ 
+0.4.2.38
+ + marker function do also from context menu pos
+
 0.4.2.37
  + folding per context menu on mouse position (idea my murphy++)
  " item view-editpanel-fold-toggle-level in markermargin_contextmenu was missing
