Import of LICHTKIND/Kephra-0.4.3.2 from CPAN.
gitpan-cpan-distribution: Kephra
gitpan-cpan-version:      0.4.3.2
gitpan-cpan-path:         LICHTKIND/Kephra-0.4.3.2.tar.gz
gitpan-cpan-author:       LICHTKIND
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,3 +1,6 @@
+0.4.3.2
+ ^ rerelease as CPAN stable version
+
 0.4.3.1
  ] xp mode for boot sequence
  " tool-output-selection-hex now on key alt+shift+f5
@@ -1563,7 +1566,7 @@
 
 
 Legend:
- " purpose
+ ^ purpose
  * big new feature
  + new feature
  ~ change
