--- a/README
+++ b/README
@@ -9,30 +9,35 @@ DESCRIPTION
     and documentation for your programming, web and text authoring.
 
   Philosophy
+  
+    Main Goals
+
+    A visually harmonic and beautiful, sparing and elegantly programed Editor,
+    that helpes you with all your daily tasks. It should be also able to operate
+    in the way you prefer and be not afraid to try new things.
+
+    In Depth
     I know, I know, there are plenty text editors out there, even some really
     mighty IDE, but still no perfect solution for many programmers. So lets
-    learn from Perl what it takes to build a tool thats powerful and fun to
-    play with for hours and months.
+    learn from Perl 5 and 6 what it takes to build a tool thats powerful and fun
+    to play with for hours and months.
     
-    * make a low entry barrier
-    * copy what people like and are used to
-    * give choices (Timtowtdi) 
-     * (e.g. deliver vi and emacs input style)
-     * usable with mouse and keyboard commands and menus
-     * configure via dialog and yaml/conf files ...
-    
-    Furthermore i made some design decisions that should define Kephra:
-    
-    * beautiful, well crafted GUI with own Icons
-    * everything is optional / configurable
+    * make a low entry barrier (usable like notepad)
+    * copy what people like and are used to and whats not inherently broken
+    * give choices (TimTowtdi) 
+      * (e.g. deliver vi and emacs input style)
+      * usable with menu, contextmenu, bars, mouse combo, key combos, commands ...
+      * configure via dialog and yaml/conf files ...
+    * highly configurable / adaptable to personal preferences
+    * beauty / good integration on GUI, code and config level
     * solve things with minimal effort (no bloat / minimal dependencies)
-    * turn CPAN into a IDE and provide just the glue
+    * still everything extendable by easy to write plugins
     
     I believe strongly that there is much more possible with GUI editors
-    and text editors in general than we are used today. So I try to design
-    Kephra in a way, that every programmer can alter and extend it easily.
-    That can speed up progress or at least makes Kephra more comfortable 
-    for you.
+    and text editors in general than we are used today. So I try to weave
+    fresh ideas wherever I can and design Kephra in a way, that every 
+    programmer can alter and extend it easily. That can speed up progress
+    or at least makes Kephra more comfortable for you.
 
     That is the plan, but we are currently not nearly that far.
 
@@ -61,19 +66,47 @@ DESCRIPTION
 
 ROADMAP
 
-  Stable Release 0.4
+  Overview
+  
+    Stable Release 0.4
 
     This release was about getting the editor liquid or highly configurable.
     Its also about improvements in the user interface and of course the little
     things we missed. It also contains interpreter output panel and a notepad.
 
-  Stable Release 0.5
+    Stable Release 0.5
 
-    code folding, utf ready, Plugin API, good test suite and easy CPAN install
+    This release is about getting Kephra into the world out there and adding
+    feature that are most needed and removing most hindering barriers.
 
-  Stable Release 0.6
+    Stable Release 0.6
 
-    the tools: tidy, outlining, snippet/tool tree, syntaxmode aware commenting
+    This release will be about extending Kephra internal extentions and Plugins.
+
+  This Cycle
+
+    Testing 0.4.1 - code folding
+
+    Testing 0.4.2 - folding and GUI refined, movable tabs, 2 more tools, doc data
+
+    Testing 0.4.3 - utf, marker, folding finished, 3 more tools, help links
+
+    Testing 0.4.4 - new mouse control, 2 more tools, docs updated
+
+    Testing 0.4.5 - more encodings, config dialog
+
+    Stable 0.5 - about dialog
+
+  Future
+
+    command line vor vi like usage
+    tree lib extention: snippet lib and toolbox in one
+    file browser
+    Plugin API
+
+Coding support like L<Perl::Tidy>, outlining, help integration, debugger
+autocompletition and so on will be long time goals. Lets see where they fit in.
+
 
 SUPPORT
     OS: Linux, Mac and Win32 (Basically same es the module named Wx.)
@@ -90,9 +123,9 @@ AUTHORS
     
     * Adam Kennedy <adamk@cpan.org> (cpanification)
  
-    * Gabor Szabo E<lt>szabgab@cpan.orgE<gt>
+    * Renee BÃ¤cker E<lt>module@renee-baecker.deE<gt> (color picker)
 
-    * Renee Bäcker E<lt>module@renee-baecker.deE<gt> (color picker)
+    * many more since we study other editors a lot and also the padre sources
 
 COPYRIGHT
     This Copyright applies only to the "Kephra" Perl software distribution, not 
