--- a/doc/Todo
+++ b/doc/Todo
@@ -1,16 +1,26 @@
 open Issues, known problems
 
+
 Technical Issues:
  - file open clutter in Tabbar
 
+0.4.4
+ + new mouse controls
+ + 3 new tools
 
+0.4.5
+ + more encodings
+ + utf convert
+ + config dialog
 
-
-0.5
- - utf convert
- - plugins
-
-
+0.5 
+ + about dialog
+ 
+0.6
+ + plugin API, demo, syntaxchecker
+ + extensions: commandline, tree lib tool  
+  
+  
 long time:
 
 plugins:
