Import of LICHTKIND/Kephra-0.4.3_15 from CPAN.
gitpan-cpan-distribution: Kephra
gitpan-cpan-version:      0.4.3_15
gitpan-cpan-path:         LICHTKIND/Kephra-0.4.3_15.tar.gz
gitpan-cpan-author:       LICHTKIND
gitpan-cpan-maturity:     developer

--- a/Changes
+++ b/Changes
@@ -9,6 +9,9 @@ todo:
    rename file
  + select content
 
+0.4.3.15
+ ! wrong literals in default commandlist
+
 0.4.3.14
  ~ correcting toggle select
  ~ changing command ID select-toggle > select-toggle-simple
