Import of LICHTKIND/Kephra-0.4.3_21 from CPAN.
gitpan-cpan-distribution: Kephra
gitpan-cpan-version:      0.4.3_21
gitpan-cpan-path:         LICHTKIND/Kephra-0.4.3_21.tar.gz
gitpan-cpan-author:       LICHTKIND
gitpan-cpan-maturity:     developer

--- a/Changes
+++ b/Changes
@@ -4,7 +4,11 @@ todo:
    Config::Tree join & split keys
  ! update configs when update cpan installation 
  ! EOL problem in UTF files
- + select content
+
+0.4.3.21
+ + select content - just quotings
+ [ add toggle script comment to selected text context menu
+ ! repaired some POD's
 
 0.4.3.20
  ~ move selection moves now wordwise when part of line selected
