Import of LICHTKIND/Kephra-0.4.3.32 from CPAN.
gitpan-cpan-distribution: Kephra
gitpan-cpan-version:      0.4.3.32
gitpan-cpan-path:         LICHTKIND/Kephra-0.4.3.32.tar.gz
gitpan-cpan-author:       LICHTKIND
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -5,6 +5,9 @@ todo:
  ! update configs when update cpan installation 
  ! EOL problem in UTF files
 
+0.4.3.32
+ ] optimise CPAN appearance
+ 
 0.4.3.31
  ] installer, no .svn files
  
